@@ -5,6 +5,8 @@ Revision history for {{$dist->name}}
         - dzil listdeps --develop now exists as an alias for dzil listdeps
           --author (Karen Etheridge)
         - PkgVersion now skips .pod files (David Golden)
+        - sort list of executable files in Makefile.PL, for deterministic
+          builds
 
 5.037     2015-06-04 21:46:38-04:00 America/New_York
         - issue a warning when version ranges are passed through to
